--- a/snake.css
+++ b/snake.css
@@ -1,3 +1,18 @@
+/* CSS Variables */
+
+:root {
+    --dark: #000;
+    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
+body {
+    background: var(--dark);
+}
+
+html {
+    color: gold;
+}
+
 #gameCanvas {
     position: absolute;
     top: 50%;
