--- a/snake.css
+++ b/snake.css
@@ -10,7 +10,8 @@ body {
 }
 
 html {
-    color: gold;
+    color: cyan;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #gameCanvas {
@@ -22,6 +23,6 @@ html {
 
 #score {
     text-align: center;
-    font-size: 140px;
-    font-family: 'Antic Slab', serif;
+    font-size: 100px;
+    font-family: Arial, Helvetica, sans-serif;
 }
