--- a/snake.css
+++ b/snake.css
@@ -11,6 +11,7 @@ body {
 
 html {
     color: cyan;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -23,6 +24,6 @@ html {
 
 #score {
     text-align: center;
-    font-size: 100px;
+    font-size: 88px;
     font-family: Arial, Helvetica, sans-serif;
 }
