--- a/snake.css
+++ b/snake.css
@@ -15,6 +15,37 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+i {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.right {
+    text-align: center;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.left {
+    text-align: center;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+.up {
+    text-align: center;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+.down {
+    text-align: center;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
 #gameCanvas {
     position: absolute;
     top: 50%;
@@ -26,31 +57,4 @@ html {
     text-align: center;
     font-size: 88px;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-i {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-}
-
-.right {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-}
-
-.left {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-}
-
-.up {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-}
-
-.down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
 }
