--- a/snake.css
+++ b/snake.css
@@ -10,7 +10,7 @@ body {
 }
 
 html {
-    color: cyan;
+    color: #6e33a9;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
